# coding_agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  raschka.md
application/: agent.py  context_manager.py  prompt_builder.py
config/: config.yaml  settings.py
data/: valid.jsonl  valid_fixed.jsonl
domain/: entities.py  ports.py  session.py
infrastructure/: llm_model.py  session_store.py  tools.py  vllm_model.py  workspace.py
interface/: api.py
scripts/: __init__.py  dataset_utils.py  download_dataset.py  infer.py  normlizedataset.py  train_lora.py
tests/: test_context_manager.py  test_entities.py  test_prompt_builder.py  test_session.py  test_settings.py  test_tools.py  test_workspace.py
