[project]
name = "mini-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
    "uvicorn>=0.43.0",
]
